[package]
name = "single_cell_rust_tools"
version = "0.1.0"
edition = "2021"

[lib]
name = "single_cell_tools"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.40.2"
rayon = "1.5.1"
pyo3 = { version = "0.17.3", features = ["extension-module"] }