[package]
name = "scnado_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "scnado"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.45.0"
rayon = "1.8.1"
tempdir = "0.3.7"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module", "abi3", "abi3-py38"]